--- a/assets/sass/components/_leaflet.scss
+++ b/assets/sass/components/_leaflet.scss
@@ -1,3 +1,4 @@
 .map {
-  height: calc(100vh - 56px);
+  // define map height
+  height: calc(100vh - #{$--navbar-height});
 }
